Spark 4 Support (#115)